hphp/test/zend/good/Zend/tests/traits/bug60165d.php.expectf

Fatal error: Unknown trait 'A' in %s/bug60165d.php on line 11
